--- a/css/styles.scss
+++ b/css/styles.scss
@@ -5,25 +5,17 @@ body{
 }
 
 .background-image-body {
-  background-image: url("../img/concert.jpg");
-  background: -moz-linear-gradient(top,rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),url("../img/customer.jpg");
-  background: -webkit-linear-gradient(top,rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),url("../img/customer.jpg");
-  background: -o-linear-gradient(top,rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),url("../img/customer.jpg");
-  background: -ms-linear-gradient(top,rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),url("../img/customer.jpg");
+  //background-image: url("../img/concert.jpg");
+  background: -moz-linear-gradient(top,rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url("../img/customer.jpg");
+  background: -webkit-linear-gradient(top,rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url("../img/customer.jpg");
+  background: -o-linear-gradient(top,rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url("../img/customer.jpg");
+  background: -ms-linear-gradient(top,rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url("../img/customer.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-color: #999;
   width: 100%;
   height: 100vh;
 
-  // #carousel-example-generic {
-  //    position: absolute;
-  //
-  //    a {
-  //      display: none;
-  //    }
-  //
-  // }
 
 
   .navbar-default {
@@ -32,7 +24,7 @@ body{
 
     .navbar-brand {
       font-family: inherit;
-      color: #fff;
+      color: #2ecc71;
       padding: 15px 30px;
       font-size: 50px;
       font-weight: 100;
@@ -140,7 +132,7 @@ body{
 
         .modal-body {
           border-radius: 15px;
-          background-color: #2c3e50;
+          background-color: #131517;
           font-family: inherit;
           border: solid 2px #00ff97;
           .upper-modal {
@@ -294,4 +286,18 @@ body{
     width: 100%;
     position: absolute;
     bottom: 0;
+  }
+
+
+  .card {
+    font-family: inherit;
+    font-size: 2em;
+    font-weight: 300;
+
+    .card-title {
+      font-size: .8em;
+      font-weight: 500;
+      border-bottom: 1px solid #000;
+    }
+
   }
