--- a/css/styles.scss
+++ b/css/styles.scss
@@ -24,7 +24,7 @@ body{
 
     .navbar-brand {
       font-family: inherit;
-      color: #2ecc71;
+      color: #fff;
       padding: 15px 30px;
       font-size: 50px;
       font-weight: 100;
@@ -39,6 +39,7 @@ body{
     text-align: center;
     display: flex;
     align-items: center;
+    margin-bottom: 15px;
     h1 {
       color: #ecf0f1;
       font-size: 4.5em;
@@ -288,16 +289,31 @@ body{
     bottom: 0;
   }
 
-
+.features {
+  background: -moz-linear-gradient(bottom,rgba(0,0,0,0) 0,#000 67%);
+  background: -webkit-linear-gradient(bottom,rgba(0,0,0,0) 0,#000 67%);
+  background: -o-linear-gradient(bottom,rgba(0,0,0,0) 0,#000 67%);
+  background: -ms-linear-gradient(bottom,rgba(0,0,0,0) 0,#000 67%);
+  padding: 30px 0 0 0;
   .card {
     font-family: inherit;
     font-size: 2em;
     font-weight: 300;
+    margin: 20px;
+
+    .img-wrapper {
+      text-align: center;
+      .card-img {
+        width: 6em;
+      }
+    }
 
     .card-title {
       font-size: .8em;
       font-weight: 500;
+      padding-bottom: 10px;
       border-bottom: 1px solid #000;
     }
 
   }
+}
