--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,31 @@
 body {
   font-family: 'Roboto', sans-serif; }
 
+@media only screen and (max-width: 500px) {
+  body header {
+    margin-bottom: 22%; }
+  body .down-arrow {
+    display: none; }
+  body .modal .upper-modal {
+    margin-bottom: 90px; }
+  body .modal .phone-number::before {
+    content: "\A";
+    white-space: pre; }
+  body .modal .cta {
+    display: flex;
+    border-radius: 8px;
+    padding: 13px;
+    flex-direction: row;
+    flex-wrap: wrap; }
+    body .modal .cta .cta-header {
+      margin: auto; }
+    body .modal .cta .form-landing-page {
+      max-width: 100%; }
+      body .modal .cta .form-landing-page .home-submit::before {
+        content: "\A";
+        white-space: pre; }
+      body .modal .cta .form-landing-page .home-submit {
+        width: 100%; } }
 .background-image-body {
   background: -moz-linear-gradient(top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/customer.jpg");
   background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/customer.jpg");
@@ -128,7 +153,7 @@ body {
     color: #fff; }
   .background-image-body form .home-submit {
     background-color: #56B68B;
-    margin: 10px 10px 10px 0 !important; }
+    margin: 10px !important; }
   .background-image-body form .btn-primary {
     border-color: #56B68B; }
   .background-image-body form .sign-up {
@@ -136,7 +161,7 @@ body {
     flex-wrap: wrap;
     padding: 3% 3%;
     border-radius: 6px;
-    width: 600px;
+    max-width: 600px;
     margin: auto; }
     .background-image-body form .sign-up.sent button {
       color: orange;
@@ -226,7 +251,8 @@ a {
       text-align: center;
       max-width: 100%;
       height: 23em;
-      order: 2; }
+      order: 2;
+      margin: auto; }
       .programming #anch1 .img-wrapper .card-img {
         width: 25em; }
 
@@ -257,15 +283,16 @@ a {
       text-align: center;
       max-width: 100%;
       height: 23em;
-      order: 2; }
+      order: 2;
+      margin: auto; }
       .time #anch2 .img-wrapper .card-img {
         width: 25em; }
 
 .communication {
-  background: -moz-linear-gradient(-180deg, #397AE9 15%, #4789E1 24%, #ADF2AB 200%);
-  background: -webkit-linear-gradient(-180deg, #397AE9 15%, #4789E1 24%, #ADF2AB 200%);
-  background: -o-linear-gradient(-180deg, #397AE9 15%, #4789E1 24%, #ADF2AB 200%);
-  background: -ms-linear-gradient(-180deg, #397AE9 15%, #4789E1 24%, #ADF2AB 200%);
+  background: -moz-linear-gradient(bottom, #232323 -60%, #00BFFF 2%, #4789E1 150%);
+  background: -webkit-linear-gradient(bottom, #232323 -60%, #00BFFF 2%, #4789E1 150%);
+  background: -o-linear-gradient(bottom, #232323 -60%, #00BFFF 2%, #4789E1 150%);
+  background: -ms-linear-gradient(bottom, #232323 -60%, #00BFFF 2%, #4789E1 150%);
   padding: 10% 0; }
   .communication #anch3 {
     display: flex;
@@ -291,7 +318,8 @@ a {
       text-align: center;
       max-width: 100%;
       height: 23em;
-      order: 2; }
+      order: 2;
+      margin: auto; }
       .communication #anch3 .img-wrapper .card-img {
         width: 25em; }
 
