--- a/css/styles.scss
+++ b/css/styles.scss
@@ -4,6 +4,51 @@ body{
   font-family: 'Roboto', sans-serif;
 }
 
+@media only screen and (max-width: 500px) {
+    body {
+        header {
+          margin-bottom: 22%;
+        }
+
+        .down-arrow {
+          display: none;
+        }
+
+        .modal {
+          .upper-modal{
+            margin-bottom: 90px;
+          }
+          .phone-number::before {
+            content: "\A";
+            white-space: pre;
+          }
+
+          .cta {
+            display: flex;
+            border-radius: 8px;
+            padding: 13px;
+            flex-direction: row;
+            flex-wrap: wrap;
+
+            .cta-header {
+              margin: auto;
+            }
+            .form-landing-page {
+              max-width: 100%;
+
+              .home-submit::before {
+                content: "\A";
+                white-space: pre;
+              }
+              .home-submit {
+                width: 100%;
+              }
+            }
+          }
+        }
+    }
+}
+
 .background-image-body {
   //background-image: url("../img/concert.jpg");
   background: -moz-linear-gradient(top,rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url("../img/customer.jpg");
@@ -192,7 +237,7 @@ body{
       form {
         .home-submit {
           background-color: #56B68B;
-          margin: 10px 10px 10px 0 !important;
+          margin: 10px !important;
           //display: inline-block;
         }
         .btn-primary {
@@ -204,7 +249,7 @@ body{
             padding: 3% 3%; // the top and bottom padding was added to increase the sign-up form outer box height
             // border: solid 1px #2ecc71;
             border-radius: 6px;
-            width: 600px;
+            max-width: 600px;
             margin: auto;
             &.sent {
                 button {
@@ -326,6 +371,7 @@ body{
       max-width: 100%;
       height: 23em;
       order: 2;
+      margin: auto;
       .card-img {
         width: 25em;
       }
@@ -368,6 +414,7 @@ body{
       max-width: 100%;
       height: 23em;
       order: 2;
+      margin: auto;
       .card-img {
         width: 25em;
       }
@@ -376,10 +423,10 @@ body{
 }
 
 .communication {
-  background: -moz-linear-gradient(-180deg,#397AE9 15%,#4789E1 24%,#ADF2AB 200%);
-  background: -webkit-linear-gradient(-180deg,#397AE9 15%,#4789E1 24%,#ADF2AB 200%);
-  background: -o-linear-gradient(-180deg,#397AE9 15%,#4789E1 24%,#ADF2AB 200%);
-  background: -ms-linear-gradient(-180deg,#397AE9 15%,#4789E1 24%,#ADF2AB 200%);
+  background: -moz-linear-gradient(bottom, #232323 -60%, #00BFFF 2%, #4789E1 150%);
+  background: -webkit-linear-gradient(bottom, #232323 -60%, #00BFFF 2%, #4789E1 150%);
+  background: -o-linear-gradient(bottom, #232323 -60%, #00BFFF 2%, #4789E1 150%);
+  background: -ms-linear-gradient(bottom, #232323 -60%, #00BFFF 2%, #4789E1 150%);
   padding: 10% 0;
 
   #anch3 {
@@ -413,6 +460,7 @@ body{
       max-width: 100%;
       height: 23em;
       order: 2;
+      margin: auto;
       .card-img {
         width: 25em;
       }
